@@ -1,3 +1,12 @@
+ 649.	[bug]		It was possible to join to an already running fctx
+			after it had "cloned" its events, but before it sent
+			them.  In this case, the event of the newly joined
+			fetch would not contain the answer, and would
+			trigger the INSIST() in fctx_sendevents().  In
+			BIND 9.0, this bug did not trigger an INSIST(), but
+			caused the fetch to fail with a SERVFAIL result.
+			[RT #597, #605, #607]
+
  648.	[port]		Add support for pre-RFC2133 IPv6 implementations.
 
  647.	[bug]		Resolver queries sent after following multiple
